# pandaConcept

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/compare-models/: SKILL.md
.claude/skills/design-consult/: SKILL.md
.claude/skills/design-interview/: SKILL.md
.claude/skills/edit-design/: SKILL.md
.claude/skills/generate-prompt/: SKILL.md
.claude/skills/generate-video/: SKILL.md
.claude/skills/mask-room/: SKILL.md
.claude/skills/mood-board/: SKILL.md
.claude/skills/preprocess-room/: SKILL.md
.claude/skills/refine/: SKILL.md
.claude/skills/render/: SKILL.md
.claude/skills/style-art-deco/: SKILL.md
.claude/skills/style-balinese/: SKILL.md
.claude/skills/style-baroque/: SKILL.md
.claude/skills/style-bauhaus/: SKILL.md
.claude/skills/style-biophilic/: SKILL.md
.claude/skills/style-bohemian/: SKILL.md
.claude/skills/style-brutalist/: SKILL.md
.claude/skills/style-chinese/: SKILL.md
.claude/skills/style-coastal/: SKILL.md
.claude/skills/style-colonial/: SKILL.md
.claude/skills/style-contemporary/: SKILL.md
.claude/skills/style-farmhouse/: SKILL.md
projects/.template/: brief.md  notes.md  rooms.md  style-config.yaml
projects/prj2/: brief.md  notes.md  rooms.md  style-config.yaml
projects/project1/: brief.md  notes.md  rooms.md  style-config.yaml
src/prompts/: builder.py
src/providers/: base.py  flux_provider.py  gemini_provider.py  grok_provider.py  openai_provider.py  registry.py  stability_provider.py
src/styles/: catalog.py
tests/: test_prompts.py  test_providers.py  test_styles.py
(+34 files in other folders)
